<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bluebg"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textSize="@dimen/header"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/verify_tg"
            android:layout_marginTop="@dimen/padding_layout_long"
            android:textColor="@color/white">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/verify_code_hint"
            android:textSize="@dimen/verify_small"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="@dimen/padding_layout_long_long_long"
            android:background="@drawable/edit_text_login_style"
            android:textAlignment="center"></EditText>

        <android.widget.Button
            android:id="@+id/button_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:layout_marginTop="@dimen/padding_layout_long_long"
            android:layout_marginBottom="@dimen/padding_layout"
            android:text="@string/verify_code_send"
            android:textColor="@color/white"
            android:textSize="@dimen/button"
            android:textAlignment="center"
            android:onClick="keempat">



        </android.widget.Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="@dimen/padding_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="doesn\'t get the code?"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Resend"
                android:textStyle="bold"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>